--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "styled-components": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
